Raise an ArgumentError for unknown pack/unpack directive

* [Bug #19150]